[package]
name = "crust-engine"
version = "0.4.0"
edition = "2024"
authors = [
    "Muhtasim Noor Al Rasheed <mutasimos5101@gmail.com>",
    "P4ncake"
]
description = "A Scratch-inspired game development tool with its own text-based programming language"
repository = "https://github.com/Muhtasim-Rasheed/crust-engine"
documentation = "https://muhtasim-rasheed.github.io/crust-engine/"
readme = "README.md"
keywords = [
    "game-development",
    "scratch",
    "text-based",
    "gamedev"
]
categories = ["graphics"]
license = "GPL-3.0-or-later"
exclude = ["target/*", "docs/*", "mkdocs.yml"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
image = "0.25.6"
indexmap = "2.10.0"
macroquad = { version = "0.4.14", features = ["audio"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
