[package]
name = "crust-engine"
version = "1.0.0"
edition = "2024"
authors = [
    "Muhtasim Noor Al Rasheed <mutasimos5101@gmail.com>",
    "P4ncake"
]
description = "A Scratch-inspired game development tool with its own text-based programming language"
repository = "https://github.com/Muhtasim-Rasheed/crust-engine"
documentation = "https://muhtasim-rasheed.github.io/crust-engine/"
readme = "README.md"
keywords = [
    "game-development",
    "scratch",
    "text-based",
    "gamedev"
]
categories = ["graphics"]
license = "GPL-3.0-or-later"
exclude = ["target/*", "docs/*", "mkdocs.yml"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
gl = "0.14.0"
glam = "0.30.5"
glfw = "0.59.0"
image = "0.25.6"
indexmap = "2.10.0"
kira = "0.10.8"
rand = "0.9.2"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.8.20"
