[package]
name = "crust-engine"
version = "1.2.0"
edition = "2024"
authors = [
    "Muhtasim Noor Al Rasheed <mutasimos5101@gmail.com>",
    "P4ncake"
]
description = "A Scratch-inspired game development tool with its own text-based programming language"
repository = "https://github.com/Muhtasim-Rasheed/crust-engine"
documentation = "https://muhtasim-rasheed.github.io/crust-engine/"
readme = "README.md"
keywords = [
    "game-development",
    "scratch",
    "text-based",
    "gamedev"
]
categories = ["graphics"]
license = "GPL-3.0-or-later"
exclude = ["target/*", "docs/*", "mkdocs.yml"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
gl = "0.14.0"
glam = "0.30.8"
glfw = "0.59.0"
image = "0.25.8"
indexmap = "2.11.4"
kira = "0.10.8"
rand = "0.9.2"
resvg = "0.45.1"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
